# libcamera

./: .gitignore  README.rst  meson.build
android/: Android.mk
reports/: debug1.txt  debug2.txt  debug3_mapsize_issue.txt  debug4_dmap_mapsize_issue.txt  debug5_thread_issue.txt
src/android/: camera_capabilities.cpp  camera_capabilities.h  camera_device.cpp  camera_stream.cpp  camera_stream.h  meson.build
src/android/mm/: generic_camera_buffer.cpp  generic_frame_buffer_allocator.cpp  graphic_buffer_allocator_stub.cpp  meson.build
src/ipa/rpi/common/: ipa_base.cpp
src/libcamera/: camera.cpp  mapped_framebuffer.cpp
src/libcamera/pipeline/rpi/common/: pipeline_base.cpp
